full_stack_v5/infra/k8s/full_stack_v5_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: full-stack-v5-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: full-stack-v5
  template:
    metadata:
      labels:
        app: full-stack-v5
    spec:
      containers:
        - name: full-stack-v5
          image: "full_stack_v5:0.0.3"
          imagePullPolicy: Never
          ports:
            - containerPort: 10006
          resources:
            requests:
              memory: "1024Mi"
              cpu: "1"
            limits:
              memory: "2048Mi"
              cpu: "2"

#kind load docker-image full_stack_v5:0.0.3 --name full-stack-v5-cluster
# kubectl get pod full-stack-v5-depl-55f74bd4bf-bgxw -o jsonpath='{.spec.containers[*].image}'
