full_stack_v5/infra/k8s/full_stack_v5_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: full-stack-v5-ingres
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: full-stack-v5-service
            port:
              number: 8080
#              name: http
